<resources>
    <!-- app名字设置为鸟林通 -->
    <string name="app_name">鸟林通</string>
    <string name="title_home">Home</string>
    <string name="title_discover">discover</string>
    <string name="title_mine">mine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text1">  在鸟界，有一种豪宅，是由勤劳的白蚁和聪明的鹦鹉共同打造。</string>
    <string name="text2">  除了和尚鹦鹉和五种牡丹鹦鹉偏爱在树上的自然空间筑巢以及三种澳大利亚和新西兰的地栖鹦鹉选择在地面上安家之外，大多数鹦鹉都钟情于洞穴生活。这些洞穴可能是树洞、悬崖峭壁，或是地面上的隐蔽角落。。</string>
    <string name="text3">   但鹦鹉们的智慧远不止于此。它们中的一些，比如红喉锥尾鹦鹉、橄榄喉鹦鹉、古巴锥尾鹦鹉和桃额锥尾鹦鹉，竟然与白蚁达成了一种奇妙的共生关系。鹦鹉们会巧妙地利用白蚁的巢穴作为自己的家，这不仅减少了巢穴的显眼程度，还为它们提供了一个温度恒定的舒适环境。</string>
    <string name="text4">  这些聪明的小家伙们会用喙精心破坏蚁丘，挖掘出一条通往巢穴的通道。这项工程大约需要一周的时间，之后它们会暂时离开，给白蚁们留出空间，用泥土将巢穴与蚁巢分隔。一周后，当白蚁完成了它们的“装修”工作，鹦鹉们便会返回，整理好巢穴，准备迎接新生命的到来。</string>
    <string name="text5">  红头牡丹鹦鹉也是这种共生筑巢方式的高手。它们选择的蚁丘是由白蚁用唾液、木头和沙子精心建造的，这些高达几米甚至超过10米的蚁丘，在非洲的稀树草原上是一道独特的风景。</string>
    <string name="text6">  在云南省大理洱源县的凤羽坝子西部，有一座被云雾缭绕的神秘山峰——鸟吊山。这里不仅是云岭山脉罗坪山的主峰，更是每年秋季，成千上万候鸟的神秘聚会之地。今天，就让我们走进鸟界趣闻，揭开鸟吊山的神秘面纱。</string>
    <string name="text7">  每年的中秋前后，这座山便成为了候鸟的天堂。它们从北方飞来，跨越千山万水，只为赴一场秋天的盛宴。然而，这里的夜晚，却隐藏着一个古老的秘密。</string>
    <string name="text8">  在风起云涌的夜晚，当地的人们会在山坡上燃起篝火，而那些鸟儿，仿佛被某种神秘力量吸引，不顾一切地向火光飞去，甚至不惜冲进火堆。这不禁让人好奇，是什么让这些鸟儿如此执着，即使面对危险也不愿离去？</string>
    <string name="text9">  这里流传着一个美丽的传说——百鸟朝凤。相传，很久以前，一对恋人因恶土司的逼迫而化作凤凰，却不幸在山上冻死。从此，每年的中秋，百鸟都会前来吊念，表达对凤凰的哀思。</string>
    <string name="text10">  而在没有月光、浓雾弥漫的夜晚，鸟儿们在空中盘旋，发出阵阵哀鸣。这时，一些好事者点燃火堆，鸟儿们便如同溺水者抓住救生圈一般，不顾一切地向火光飞去。被捕的鸟儿大多瘦小，人们说它们是为了哀悼凤凰而不食，这为传说增添了几分伤感。</string>
    <string name="text11">  那么，鸟儿为什么会被火光吸引呢？鸟类学家认为，这与鸟吊山的地形和气候有关。秋季是候鸟迁徙的季节，而鸟吊山的沟谷和坝子的走向，为鸟类提供了迁徙的通道。据传在云南，过去由于人们对环境保护和鸟类保护意识的缺失，每逢迁徙季节，人们便借机捕捉这些途经的候鸟。他们通过点燃火堆或使用强光源，诱使鸟儿误入预先设置的陷阱之中。</string>
    <string name="text12">  然而，随着社会的发展和环保意识的提高，人们开始意识到保护鸟类的重要性。如今，捕捉候鸟的行为已经得到了改善，人们不再利用火光或强光吸引鸟儿，而是尊重它们的生命，保护它们的迁徙之路。</string>
    <string name="text13">  鸟吊山的故事，不仅是一段美丽的传说，更是一个关于自然与生命、保护与尊重的启示。下次当你仰望星空，看到那些勇敢的候鸟在夜空中飞翔时，不妨想象一下，它们是带着对凤凰的哀思，还是对自由的渴望，飞向那遥远的南方。</string>
    <string name="text14">  有一种鸟类以其华丽的外表和独特的求偶舞蹈，被誉为自然界的超级明星，它们就是天堂鸟。这些神话与魔鬼的化身，以其无与伦比的美丽和奇异的求偶行为，吸引了无数画家和科学家的目光。</string>
    <string name="text15">  在2011年的纪录片《天堂鸟》中，我们得以一窥这些极乐鸟的风采。威尔逊天堂鸟以其令人目眩神迷的色彩，成为了鸟类中的时尚达人；黑镰嘴天堂鸟每天清晨都会在同一地点，将胸羽举过头顶，进行多达五次的求偶表演；华美天堂鸟在求偶时张开双翼，形成一张半椭圆形的黑色“幕布”，其胸部的蓝色胸盾更是美得令人窒息。</string>
    <string name="text16">  然而，最引人注目的还是劳氏六线风鸟的动感舞步。在开始表演前，这些雄鸟会精心挑选场地，清理杂草和树叶，用浆果装饰舞台，甚至用蛇皮或哺乳动物皮毛擦拭树枝，为雌性观众准备一场视觉盛宴。</string>
    <string name="text17">  道尔波蒂斯在书中描述了劳氏六线风鸟的求偶舞蹈：“那只鸟伸展又收缩它两侧的长羽毛，让身体有时看着大，有时看着小，接着它先跳到一侧，然后是另一侧，昂首挺胸地摆出了战斗的姿势，就好像在与一位无形的对手搏斗。”如果表演成功，雄鸟便能赢得多只雌性的青睐，将自己的基因传承下去。但如果表演出现疏忽，它可能就会空手而归。</string>
    <string name="text18">  天堂鸟的求偶舞蹈，不仅是一场视觉盛宴，更是自然界中生存与繁衍的智慧体现。</string>












</resources>